# TCU-Specification

./: latexmk.rc  main.tex
.github/workflows/: build-spec.yaml
fpga_tools/: Makefile  README.md
fpga_tools/bitfiles/: bitfile-releases.txt  fpga_top.bit
fpga_tools/debug/: fpga_switch.cfg
fpga_tools/nocrw/: Cargo.toml  build.sh
fpga_tools/nocrw/src/: com.rs  lib.rs
fpga_tools/python/: acc.py  bic1_modids.py  c2c.py  dram.py  ethernet.py  fpga_top.py  fpga_utils.py  memory.py  modids.py  noc.py  pm.py  regfile.py  router.py  tcu.py  tile.py  uart.py
fpga_tools/scripts/: program_fpga.tcl  reducehex.py  riscv.ld
fpga_tools/testcases/tc_dtu/: Makefile  testcase.py
fpga_tools/testcases/tc_dtu/src/: tc_dtu.cc
fpga_tools/testcases/tc_rocket_boot/: Makefile  testcase.py
fpga_tools/testcases/tc_rocket_boot/src/: main.c
fpga_tools/testcases/tc_rocket_boot/targets/: rocket_boot  rocket_boot.hex
fpga_tools/testcases/tc_rocket_tcu_test/: Makefile  testcase.py
fpga_tools/testcases/tc_rocket_tcu_test/src/: standalone.cc
fpga_tools/testcases/tc_rocket_tcu_test/targets/: standalone.hex
fpga_tools/testcases/tc_transfers/: testcase.py
spec/: b  main.tex
spec/chapters/: eps.tex  extern.tex  overview.tex  priv.tex  transfers.tex  unpriv.tex
test/: DTU.h  standalone.cc
test/hw/: platform.cc  platform.h
test/riscv/: asm.h
