[workspace]

[package]
name = "nocrw"
version = "0.1.0"
authors = ["Nils Asmussen <nils@os.inf.tu-dresden.de>"]
edition = "2018"

[lib]
name = "nocrw"
crate-type = ["cdylib"]

[dependencies]
socket2 = "0.4.7"
lazy_static = "1.4.0"
num_enum = "0.5.7"
log = "0.4.17"
simplelog = "0.12.0"

[dependencies.cpython]
version = "0.5"
features = ["extension-module"]
